--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -47,3 +47,40 @@ body {
   background-color: rgba(255, 255, 255, 0.1);
   color: #F44336;
 }
+
+
+
+
+
+.expense-container {
+  margin-top: 20px;
+}
+
+.expense-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  flex-grow: 1;
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+}
+
+.expense-box li {
+  background-color: #ffffff;
+  border: 1px solid #eaeaea;
+  border-radius: 8px;
+  padding: 20px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  width: calc(33.33% - 10px);
+  margin-bottom: 20px;
+  
+}
+
+.amount {
+  font-weight: bold;
+  color: #ff5c5c;
+  font-size: 20px;
+  margin-top: 10px;
+  margin-right: 50%;
+}
+
