--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,3 +14,12 @@
   </ul>
 </div>
 
+
+<h2>Recent Expenses</h2>
+
+<div class="expense-container">
+  <div class="expense-box" *ngFor="let expense of recentExpenses">
+    <p>{{ expense.description }}</p>
+    <p class="amount">${{ expense.amount }}</p>
+  </div>
+</div>
