--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -10,4 +10,7 @@
   </ul>
 </div>
 
-<button (click)="logout()">Log Out</button>
+<button mat-raised-button color="primary" class="button-primary" (click)="changePassword()">Change Password</button>
+
+<button mat-raised-button color="warn" class="button-danger" (click)="logout()">Log Out</button>
+
